# kana-kilo

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  index.html  kana_to_romanji.csv  styles.css
src/: lib.rs  main.rs  syllabograms.rs  translations.rs  utils.rs
src/components/: app.rs  hide_state.rs  icons.rs  mod.rs
src/components/game/: clock.rs  kana.rs  mod.rs  romanji.rs  score.rs  screen.rs
src/components/kana/: button.rs  chart.rs  enums.rs  mod.rs  row.rs  screen.rs  syllabary.rs
