[package]
name = "kana-kilo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
csv = "1.1.6"
phf_codegen = "0.10.0"

[dependencies]
lazy_static = "1.4.0"
getrandom = { version = "0.2.3", features = ["js"] }
palette = "0.6"
phf = "0.10.0"
rand = "0.8.4"
strum = { version = "0.23", features = ["derive"] }
wee_alloc = "0.4.5"
yew = "0.18"
yewtil = "0.4"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
